idea/testData/checker/regression/BadParseForClass.kt
fun main(args: Array<String>) {
    String.class
<error descr="Name expected">}</error><EOLError descr="Expecting '}"></EOLError>

// EA-56152: An attempt to build light class in checker to get diagnotics